# bibby

./: CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  bibby.ini  imgui.ini
.claude/skills/: arch.md
frontend/: CMakeLists.txt  csv_logger.cpp  csv_logger.h  display.cpp  display.h  main.cpp  pid.cpp  pid.h  temp_filter.cpp  temp_filter.h
frontend/gui/: kettle.cpp  kettle.h  temp_history.cpp  temp_history.h
frontend/sensors/: max31865.cpp  max31865.h
heater-controller/: CMakeLists.txt  main.c
pi_hat/: LICENSE
pi_hat/bibby_pi_hat/: biab_controller.kicad_sch  bibby_pi_hat.kicad_pcb  bibby_pi_hat.kicad_prl  bibby_pi_hat.kicad_pro  bibby_pi_hat.kicad_sch
shared/: config.c  config.h  shm_types.h  single_instance.h
tools/: identify_plant.py
